2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: Split out code blocks to parse book, chapter,
	keywords in preparation for further cleanups and
	improvements. Also remove temporary hack to handle broken books
	that were generated during a brief period dring 2005.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_cb), (parser_end_node_cb):
	Some micro optimizations of things that turned up in the profile:
	Reduce number of strdups/frees, only try to fix up broken gtk-doc
	files if needed.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (base_add_books): Don't free the path string,
	fixes crash if the same book name is found more than once.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (keyword_model_get_column_type),
	(keyword_model_get_value):
	* src/dh-keyword-model.h: Remove unused model column for "is
	deprecated".

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: (window_open_new_tab): Set shadow type to "in"
	again, seems to have been lost in webkit merge.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-link.c: (dh_link_get,set_is_deprecated):
	* src/dh-link.h: Remove, now obsoleted by get,set_flags.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (keyword_model_get_value),
	(dh_keyword_model_set_words), (dh_keyword_model_filter): Use
	getters for link members.

2008-10-03  Richard Hult  <richard@imendio.com>

	* data/ui/Makefile.am:
	* data/ui/*.png:
	* data/ui/*.xpm: Remove unused images.

2008-10-03  Richard Hult  <richard@imendio.com>

	* src/dh-book-tree.c: (book_tree_finalize), (dh_book_tree_init),
	(book_tree_insert_node): Use getters for link members.
	- Remove the ugly GNOME 1 looking icons from the book tree, use
	bold text to indicate which rows are the toplevel book nodes
	instead.

2008-10-03  Richard Hult  <richard@imendio.com>
