@@ -1,5 +1,9 @@
 2008-10-03  Richard Hult  <richard@imendio.com>
 
+	* src/dh-parser.c: More preparations, reorder things a bit.
+
+2008-10-03  Richard Hult  <richard@imendio.com>
+
 	* src/dh-parser.c: Split out code blocks to parse book, chapter,
 	keywords in preparation for further cleanups and
 	improvements. Also remove temporary hack to handle broken books
